Atualizando notas de EDA-1

--- a/ensino/eda-2022-1/notas.htm
+++ b/ensino/eda-2022-1/notas.htm
@@ -3774,11 +3774,11 @@ font-weight:800;font-style:normal'>Notas EDA-1 2022/1</h1>
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:.5pt solid #99FFCC'>&nbsp;</td>
-  <td class=xl709256 align=right style='font-size:11.0pt;color:windowtext;
-  font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
+  <td class=xl709256 style='font-size:11.0pt;color:windowtext;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  .5pt solid #99FFCC'>0,00</td>
+  .5pt solid #99FFCC'>&nbsp;</td>
   <td class=xl719256 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
   none'>6,4</td>
@@ -3841,6 +3841,7 @@ font-weight:800;font-style:normal'>Notas EDA-1 2022/1</h1>
 </body>
 
 </html>
+
 
 
 
