Atualizando notas de FAC

--- a/ensino/fac-2022-2/notas.htm
+++ b/ensino/fac-2022-2/notas.htm
@@ -7,8 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="notas_arquivos/filelist.xml">
-<style id="FAC-notas_20926_Styles">
-<!--table
+<style id="FAC-notas_20926_Styles"><!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:"\.";}
 .xl1520926
@@ -515,8 +514,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:normal;}
--->
-</style>
+--></style>
 <title>Notas FAC 2022/1</title>
 </head>
 
@@ -534,7 +532,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="FAC-notas_20926" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas FAC 2022/1</h1>
+font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=881 style='border-collapse:
  collapse;table-layout:fixed;width:664pt'>
@@ -8939,3 +8937,4 @@ font-weight:800;font-style:normal'>Notas FAC 2022/1</h1>
 </body>
 
 </html>
+
