--- a/ensino/fac-2022-2/notas.htm
+++ b/ensino/fac-2022-2/notas.htm
@@ -6279,7 +6279,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>7,52</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>8,97</td>
   <td class=xl8720926 width=69 style='width:52pt;font-size:11.0pt;color:black;
   font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -6307,12 +6307,12 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
   border-top:.5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:
   .5pt solid #9BEEF0;border-left:.5pt solid #99FFCC;background:#CDF7F8;
   mso-pattern:black none'>7,7</td>
-  <td class=xl7720926 width=45 style='border-left:none;width:34pt;font-size:
-  11.0pt;color:black;font-weight:400;text-decoration:none;text-underline-style:
+  <td class=xl7720926 align=right width=45 style='border-left:none;width:34pt;
+  font-size:11.0pt;color:black;font-weight:400;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:
   .5pt solid #9BEEF0;border-left:.5pt solid #99FFCC;background:#CDF7F8;
-  mso-pattern:black none'>&nbsp;</td>
+  mso-pattern:black none'>8,5</td>
   <td class=xl7720926 align=right width=45 style='border-left:none;width:34pt;
   font-size:11.0pt;color:black;font-weight:400;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
@@ -6328,7 +6328,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>7,1</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>8,8</td>
  </tr>
  <tr height=22 style='mso-height-source:userset;height:16.5pt'>
   <td height=22 class=xl7520926 style='height:16.5pt;font-size:11.0pt;
@@ -8890,7 +8890,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
   text-underline-style:none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:
   .5pt solid #9BEEF0;border-left:.5pt solid #99FFCC;background:#CDF7F8;
-  mso-pattern:black none'>6,2</td>
+  mso-pattern:black none'>6,3</td>
   <td class=xl8120926 align=right width=45 style='border-left:none;width:34pt;
   font-size:11.0pt;color:windowtext;font-weight:400;text-decoration:none;
   text-underline-style:none;text-line-through:none;font-family:"Century Gothic", sans-serif;
@@ -8906,7 +8906,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
   color:black;font-style:italic;font-weight:700;text-decoration:none;
   text-underline-style:none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>5,2</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>5,3</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
@@ -8937,5 +8937,6 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2</h1>
 </body>
 
 </html>
+
 
 
