Atualizando notas de FAC

--- a/ensino/fac-2022-2/notas.htm
+++ b/ensino/fac-2022-2/notas.htm
@@ -430,7 +430,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="FAC-notas_20926" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização em 24/02 às 10:37)</h1>
+font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização em 24/02 às 15:45)</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=711 style='border-collapse:
  collapse;table-layout:fixed;width:536pt'>
@@ -2089,37 +2089,37 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
   border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>190084570</td>
   <td class=xl7320926 width=69 style='border-left:none;width:52pt;font-size:
-  11.0pt;color:#C00000;font-weight:700;text-decoration:none;text-underline-style:
+  11.0pt;color:#00B050;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>SR</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>MM</td>
   <td class=xl7920926 width=52 style='width:39pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:.5pt solid #99FFCC;
-  background:#CDF7F8;mso-pattern:black none'>16</td>
+  background:#CDF7F8;mso-pattern:black none'>14</td>
   <td class=xl6320926 align=right width=45 style='width:34pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>3,0</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>5,0</td>
+  <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
+  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
+  background:#CDF7F8;mso-pattern:black none'>10,0</td>
+  <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
+  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
+  background:#CDF7F8;mso-pattern:black none'>10,0</td>
   <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
   background:#CDF7F8;mso-pattern:black none'>0,0</td>
   <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
-  background:#CDF7F8;mso-pattern:black none'>0,0</td>
-  <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
-  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
-  background:#CDF7F8;mso-pattern:black none'>0,0</td>
-  <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
-  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
-  background:#CDF7F8;mso-pattern:black none'>0,0</td>
+  background:#CDF7F8;mso-pattern:black none'>10,0</td>
   <td class=xl6320926 align=right width=45 style='width:34pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>0,0</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>6,7</td>
   <td class=xl7420926 align=right width=45 style='border-left:none;width:34pt;
   font-size:11.0pt;color:black;font-weight:400;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
@@ -8145,26 +8145,18 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
   .5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>&nbsp;</td>
-  <td class=xl8020926 align=right style='font-size:11.0pt;color:windowtext;
-  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
+  <td class=xl8020926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none;background:#CDF7F8;mso-pattern:black none'>1,90</td>
-  <td class=xl8020926 align=right style='font-size:11.0pt;color:windowtext;
-  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
+  none;background:#CDF7F8;mso-pattern:black none'>1,98</td>
+  <td class=xl8020926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none;background:#CDF7F8;mso-pattern:black none'>8,04</td>
-  <td class=xl8020926 align=right style='font-size:11.0pt;color:windowtext;
-  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
+  none;background:#CDF7F8;mso-pattern:black none'>8,13</td>
+  <td class=xl8020926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
   none;background:#CDF7F8;mso-pattern:black none'>5,52</td>
-  <td class=xl8020926 align=right style='font-size:11.0pt;color:windowtext;
-  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
+  <td class=xl8020926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none;background:#CDF7F8;mso-pattern:black none'>5,12</td>
+  none;background:#CDF7F8;mso-pattern:black none'>5,21</td>
   <td class=xl6320926 width=45 style='border-left:none;width:34pt;font-size:
   11.0pt;color:black;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
@@ -8221,6 +8213,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
 </body>
 
 </html>
+
 
 
 
