Atualizando notas de FAC

--- a/ensino/fac-2022-2/notas.htm
+++ b/ensino/fac-2022-2/notas.htm
@@ -430,7 +430,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="FAC-notas_20926" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização em 24/02 às 15:45)</h1>
+font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização em 24/02 às 17:30)</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=711 style='border-collapse:
  collapse;table-layout:fixed;width:536pt'>
@@ -2467,10 +2467,10 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
   border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>190091720</td>
   <td class=xl7320926 width=69 style='border-left:none;width:52pt;font-size:
-  11.0pt;color:red;font-weight:700;text-decoration:none;text-underline-style:
+  11.0pt;color:#00B050;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>MI</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>MM</td>
   <td class=xl7920926 width=52 style='width:39pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -2480,10 +2480,10 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>4,9</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>5,0</td>
   <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
-  background:#CDF7F8;mso-pattern:black none'>0,0</td>
+  background:#CDF7F8;mso-pattern:black none'>1,0</td>
   <td class=xl6520926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
   background:#CDF7F8;mso-pattern:black none'>10,0</td>
@@ -8147,7 +8147,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
   .5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>&nbsp;</td>
   <td class=xl8020926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none;background:#CDF7F8;mso-pattern:black none'>1,98</td>
+  none;background:#CDF7F8;mso-pattern:black none'>1,99</td>
   <td class=xl8020926 align=right style='border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
   none;background:#CDF7F8;mso-pattern:black none'>8,13</td>
@@ -8213,6 +8213,7 @@ font-weight:800;font-style:normal'>Notas FAC 2022/2 (última atualização 
 </body>
 
 </html>
+
 
 
 
