--- a/ensino/eda2-2022-2/notas.htm
+++ b/ensino/eda2-2022-2/notas.htm
@@ -408,7 +408,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="FAC-notas_20926" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas EDA-2 2022/2 (última atualização em 24/02 às 17:00)</h1>
+font-weight:800;font-style:normal'>Notas EDA-2 2022/2 (última atualização em 24/02 às 17:50)</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=673 style='border-collapse:
  collapse;table-layout:fixed;width:508pt'>
@@ -3420,15 +3420,15 @@ font-weight:800;font-style:normal'>Notas EDA-2 2022/2 (última atualização
   .5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;
   border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>190047348</td>
   <td class=xl7320926 width=69 style='border-left:none;width:52pt;font-size:
-  11.0pt;color:#C00000;font-weight:700;text-decoration:none;text-underline-style:
+  11.0pt;color:#00B050;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>SR</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>MM</td>
   <td class=xl7320926 width=61 style='width:46pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:.5pt solid #99FFCC;
-  background:#CDF7F8;mso-pattern:black none'>24</td>
+  background:#CDF7F8;mso-pattern:black none'>14</td>
   <td class=xl6320926 align=right width=45 style='width:34pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
@@ -7855,6 +7855,7 @@ font-weight:800;font-style:normal'>Notas EDA-2 2022/2 (última atualização
 </body>
 
 </html>
+
 
 
 
