Atualizando notas de FAC

--- a/ensino/fac-2024-2/notas.htm
+++ b/ensino/fac-2024-2/notas.htm
@@ -7,8 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="notas_arquivos/filelist.xml">
-<style id="EDA2-notas-2024_1_21745_Styles">
-<!--table
+<style id="EDA2-notas-2024_1_21745_Styles"><!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:"\.";}
 .xl1521745
@@ -693,8 +692,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:normal;}
--->
-</style>
+--></style>
 <title>Notas FAC 2024/2 - Turma 02 (última atualização em 08/02 às 00:30)</title>
 </head>
 
@@ -712,7 +710,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="EDA2-notas-2024_1_21745" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas FAC 2024/2 - Turma 02 (última atualização em 08/02 às 00:30)</h1>
+font-weight:800;font-style:normal'>Notas FAC 2024/2 - Turma 02 (última atualização em 08/02 às 00:43)</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=646 style='border-collapse:
  collapse;table-layout:fixed;width:478pt'>
@@ -7341,15 +7339,15 @@ font-weight:800;font-style:normal'>Notas FAC 2024/2 - Turma 02 (última a
   <td class=xl7821745 style='font-size:11.0pt;color:windowtext;font-weight:
   400;text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
-  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none'>0,00</td>
+  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none'>5,00</td>
   <td class=xl7821745 style='font-size:11.0pt;color:windowtext;font-weight:
   400;text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
-  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none'>0,00</td>
+  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none'>5,00</td>
   <td class=xl7921745 width=46 style='width:34pt;font-size:11.0pt;color:windowtext;
   font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
-  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none'>0,0</td>
+  border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none'>5,0</td>
   <td class=xl8421745 width=38 style='width:28pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -9056,17 +9054,17 @@ font-weight:800;font-style:normal'>Notas FAC 2024/2 - Turma 02 (última a
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none'>8,00</td>
+  none'>8,04</td>
   <td class=xl8721745 style='font-size:11.0pt;color:windowtext;font-style:italic;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none'>7,57</td>
+  none'>7,61</td>
   <td class=xl8721745 style='font-size:11.0pt;color:windowtext;font-style:italic;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none'>7,78</td>
+  none'>7,82</td>
   <td class=xl8821745 style='font-size:11.0pt;color:windowtext;font-style:italic;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -9121,3 +9119,4 @@ font-weight:800;font-style:normal'>Notas FAC 2024/2 - Turma 02 (última a
 </body>
 
 </html>
+
