--- a/ensino/eda2-2024-2/notas.htm
+++ b/ensino/eda2-2024-2/notas.htm
@@ -818,7 +818,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="EDA2-notas-2024_1_21745" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização em 14/02 às 01:35)</h1>
+font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização em 14/02 às 01:40)</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=646 style='border-collapse:
  collapse;table-layout:fixed;width:491pt'>
@@ -7520,7 +7520,7 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
   11.0pt;color:windowtext;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC'>7,8</td>
+  border-left:.5pt solid #99FFCC'>7,7</td>
   <td class=xl6721745 style='border-top:.5pt solid #9BEEF0;border-right:none;
   border-bottom:.5pt solid #9BEEF0;border-left:none'></td>
   <td class=xl7421745 align=right style='border-top:.5pt solid #9BEEF0;
@@ -7536,7 +7536,7 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
   11.0pt;color:black;font-weight:400;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:
-  .5pt solid #9BEEF0;border-left:.5pt solid #99FFCC'>0,5</td>
+  .5pt solid #9BEEF0;border-left:.5pt solid #99FFCC'>&nbsp;</td>
   <td class=xl8421745 width=38 style='border-left:none;width:29pt;font-size:
   11.0pt;color:black;font-weight:400;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
@@ -7555,7 +7555,7 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC'>7,9</td>
+  border-left:.5pt solid #99FFCC'>7,7</td>
  </tr>
  <tr height=22 style='mso-height-source:userset;height:16.5pt'>
   <td height=22 class=xl9221745 style='height:16.5pt;border-top:.5pt solid #9BEEF0;
@@ -7983,7 +7983,7 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none'>4,9</td>
+  none'>5,0</td>
   <td class=xl8521745 style='font-size:11.0pt;color:windowtext;font-style:italic;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -7998,12 +7998,12 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none'>&nbsp;</td>
+  none'>4,9</td>
   <td class=xl7221745 align=right style='font-size:11.0pt;color:windowtext;
   font-style:italic;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:.5pt solid #99FFCC;border-bottom:
-  .5pt solid #9BEEF0;border-left:none'>6,5</td>
+  .5pt solid #9BEEF0;border-left:none'>5,9</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
@@ -8033,5 +8033,6 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
 </body>
 
 </html>
+
 
 
