--- a/ensino/eda2-2024-2/notas.htm
+++ b/ensino/eda2-2024-2/notas.htm
@@ -1115,12 +1115,12 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
-  cursor:pointer;min-width: 19px'>44</td>
-  <td class=xl7721745 width=78 style='width:59pt;font-size:11.0pt;color:#C00000;
+  cursor:pointer;min-width: 19px'>17</td>
+  <td class=xl7721745 width=78 style='width:59pt;font-size:11.0pt;color:red;
   font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  .5pt solid #99FFCC'>SR</td>
+  .5pt solid #99FFCC'>II</td>
   <td class=xl9021745 width=46 style='border-left:none;width:35pt;font-size:
   11.0pt;color:windowtext;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
@@ -8033,6 +8033,7 @@ font-weight:800;font-style:normal'>Notas EDA-2 2024/2 (última atualização
 </body>
 
 </html>
+
 
 
 
