--- a/ensino/eda1-2025-2/notas.htm
+++ b/ensino/eda1-2025-2/notas.htm
@@ -808,7 +808,7 @@ entre as marcas DIV serão substituídas.-->
 <div id="EDA2-notas-2024_1_21745" align=center x:publishsource="Excel">
 
 <h1 style='color:black;font-family:"Century Gothic";font-size:14.0pt;
-font-weight:800;font-style:normal'>Notas EDA-1 2025/2 (última atualização em 02/12 às 12:05)</h1>
+font-weight:800;font-style:normal'>Notas EDA-1 2025/2 (última atualização em 02/12 às 12:10)</h1>
 
 <table border=0 cellpadding=0 cellspacing=0 width=784 style='border-collapse:
  collapse;table-layout:fixed;width:580pt'>
@@ -952,22 +952,22 @@ font-weight:800;font-style:normal'>Notas EDA-1 2025/2 (última atualização
  <tr height=22 style='mso-height-source:userset;height:16.5pt'>
   <td height=22 class=xl9321745 style='height:16.5pt;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none;background:yellow;mso-pattern:black none'>190048549</td>
+  none;background:#CDF7F8;mso-pattern:black none'>190048549</td>
   <td class=xl9521745 width=58 style='width:43pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:none;
   background:#CDF7F8;mso-pattern:black none'>12</td>
-  <td class=xl7321745 width=78 style='width:58pt;font-size:11.0pt;color:red;
+  <td class=xl7321745 width=78 style='width:58pt;font-size:11.0pt;color:#00B050;
   font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  .5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>MI</td>
+  .5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>MM</td>
   <td class=xl8521745 width=46 style='border-left:none;width:34pt;font-size:
   11.0pt;color:windowtext;font-weight:700;text-decoration:none;text-underline-style:
   none;text-line-through:none;font-family:"Century Gothic", sans-serif;
   border-top:.5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>4,0</td>
+  border-left:.5pt solid #99FFCC;background:#CDF7F8;mso-pattern:black none'>5,1</td>
   <td class=xl9721745 style='font-size:11.0pt;color:windowtext;font-weight:
   700;text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -1012,12 +1012,12 @@ font-weight:800;font-style:normal'>Notas EDA-1 2025/2 (última atualização
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:none;border-bottom:.5pt solid #9BEEF0;border-left:.5pt solid #99FFCC;
-  background:#CDF7F8;mso-pattern:black none'>&nbsp;</td>
+  background:#CDF7F8;mso-pattern:black none'>3,8</td>
   <td class=xl9821745 align=right width=46 style='width:34pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:"Century Gothic", sans-serif;border-top:
   .5pt solid #9BEEF0;border-right:none;border-bottom:.5pt solid #9BEEF0;
-  border-left:none;background:#CDF7F8;mso-pattern:black none'>2,9</td>
+  border-left:none;background:#CDF7F8;mso-pattern:black none'>4,2</td>
  </tr>
  <tr height=22 style='mso-height-source:userset;height:16.5pt'>
   <td height=22 class=xl9321745 style='height:16.5pt;border-top:.5pt solid #9BEEF0;
@@ -8014,7 +8014,7 @@ font-weight:800;font-style:normal'>Notas EDA-1 2025/2 (última atualização
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
   border-right:.5pt solid #99FFCC;border-bottom:.5pt solid #9BEEF0;border-left:
-  none;background:#CDF7F8;mso-pattern:black none'>3,5</td>
+  none;background:#CDF7F8;mso-pattern:black none'>3,6</td>
   <td class=xl9221745 style='font-size:11.0pt;color:windowtext;font-weight:
   700;text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:"Century Gothic", sans-serif;border-top:.5pt solid #9BEEF0;
@@ -8052,6 +8052,7 @@ font-weight:800;font-style:normal'>Notas EDA-1 2025/2 (última atualização
 </body>
 
 </html>
+
 
 
 
